--- a/.gitmodules
+++ b/.gitmodules
@@ -57,4 +57,4 @@
 	url = git://github.com/itchyny/lightline.vim.git
 [submodule "bundle/vim-tmux-navigator"]
 	path = bundle/vim-tmux-navigator
-	url = git://github.com/itchyny/lightline.vim.git
+   url = git://github.com/christoomey/vim-tmux-navigator.git
