--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "bundle/vimux"]
 	path = bundle/vimux
 	url = git://github.com/benmills/vimux.git
+[submodule "bundle/bracketed-paste"]
+	path = bundle/bracketed-paste
+	url = git://github.com/ConradIrwin/vim-bracketed-paste.git
