--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "bundle/indexed-search"]
 	path = bundle/indexed-search
 	url = git://github.com/vim-scripts/IndexedSearch.git
+[submodule "bundle/clever-f"]
+	path = bundle/clever-f
+	url = git://github.com/rhysd/clever-f.vim.git
