--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "bundle/clever-f"]
 	path = bundle/clever-f
 	url = git://github.com/rhysd/clever-f.vim.git
+[submodule "bundle/targets"]
+	path = bundle/targets
+	url = git://github.com/wellle/targets.vim.git
