--- a/.gitmodules
+++ b/.gitmodules
@@ -54,16 +54,16 @@
 	url = git://github.com/christoomey/vim-tmux-navigator.git
 [submodule "bundle/pathogen"]
 	path = bundle/pathogen
-	url = https://github.com/tpope/vim-pathogen.git
+	url = git://github.com/tpope/vim-pathogen.git
 [submodule "bundle/json.vim"]
 	path = bundle/json.vim
-	url = https://github.com/helino/vim-json.git
+	url = git://github.com/helino/vim-json.git
 [submodule "bundle/javascript.vim"]
 	path = bundle/javascript.vim
-	url = https://github.com/jelera/vim-javascript-syntax.git
+	url = git://github.com/jelera/vim-javascript-syntax.git
 [submodule "bundle/javascript2.vim"]
 	path = bundle/javascript2.vim
-	url = https://github.com/pangloss/vim-javascript.git
+	url = git://github.com/pangloss/vim-javascript.git
 [submodule "bundle/ack.vim"]
 	path = bundle/ack.vim
 	url = git://github.com/mileszs/ack.vim.git
