Giant mess of stuff
* Updated submodules to latest
* Added git syntax plugin
* Added rooter plugin (remaps cwd to root of repo)
* Added scratch buffer plugin (toggle with tilde)
* Added tmux focus events plugin, tmux forwards focus events to vim
* Added vinegar, file navigation using netrw, but sane
* Various tweaks to configs
   * Cursor changes between modes
   * wildmenu ignores git directory
   * Can move visual blocks

--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,21 @@
 [submodule "bundle/commentary"]
 	path = bundle/commentary
 	url = git://github.com/tpope/vim-commentary.git
+[submodule "bundle/vinegar"]
+	path = bundle/vinegar
+	url = git://github.com/tpope/vim-vinegar.git
+[submodule "bundle/rooter"]
+	path = bundle/rooter
+	url = git://github.com/airblade/vim-rooter.git
+[submodule "bundle/git.vim"]
+	path = bundle/git.vim
+	url = git://github.com/tpope/vim-git.git
+[submodule "bundle/python.vim"]
+	path = bundle/python.vim
+	url = git://github.com/hdima/python-syntax.git
+[submodule "bundle/tmux-focus-events"]
+	path = bundle/tmux-focus-events
+	url = git://github.com/tmux-plugins/vim-tmux-focus-events.git
+[submodule "bundle/scratch"]
+	path = bundle/scratch
+	url = git://github.com/mtth/scratch.vim.git
